--- a/style.css
+++ b/style.css
@@ -8,8 +8,9 @@ body{
     overflow-x: hidden;
 }
 .main-width{
-    width: 1600px;
+    width: 1400px;
     max-width:100%;
+    max-height:100%;
     height:100%;
     margin: 0 auto;
 }
